--- a/apps/ios/ieltseye/IELTSEye/IELTSEye-Info.plist
+++ b/apps/ios/ieltseye/IELTSEye/IELTSEye-Info.plist
@@ -16,10 +16,10 @@
 		<dict>
 			<key>CFBundleIconFiles</key>
 			<array>
-				<string>icon.png</string>
-				<string>icon@2x.png</string>
-				<string>icon-72.png</string>
-				<string>icon-72@2x.png</string>
+				<string>icon57.png</string>
+				<string>icon114.png</string>
+				<string>icon144.png</string>
+				<string>icon72.png</string>
 			</array>
 			<key>UIPrerenderedIcon</key>
 			<false/>
@@ -41,13 +41,12 @@
 	<string>1.0</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
-	<key>NSMainNibFile</key>
-	<string></string>
 	<key>NSMainNibFile~ipad</key>
 	<string></string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
