--- a/apps/IELTSEye/platforms/android/bin/AndroidManifest.xml
+++ b/apps/IELTSEye/platforms/android/bin/AndroidManifest.xml
@@ -9,6 +9,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" android:name="com.google.ads.AdActivity">
+        </activity>
     </application>
     <uses-sdk android:minSdkVersion="10" android:targetSdkVersion="17" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
