--- a/apps/IELTSEye/platforms/android/AndroidManifest.xml
+++ b/apps/IELTSEye/platforms/android/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest android:hardwareAccelerated="true" android:versionCode="1" android:versionName="1.0.0" android:windowSoftInputMode="adjustPan" package="com.ieltseye.IELTSEye" xmlns:android="http://schemas.android.com/apk/res/android">
     <supports-screens android:anyDensity="true" android:largeScreens="true" android:normalScreens="true" android:resizeable="true" android:smallScreens="true" android:xlargeScreens="true" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-sdk android:minSdkVersion="10" android:targetSdkVersion="17" />
     <application android:debuggable="true" android:hardwareAccelerated="true" android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale" android:label="@string/app_name" android:name="IELTSEye" android:theme="@android:style/Theme.Black.NoTitleBar">
             <intent-filter>
@@ -9,13 +13,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" android:name="com.google.ads.AdActivity">
-        </activity>
-		<meta-data android:value="51eabdec56240bca1b05e670" android:name="UMENG_APPKEY"></meta-data>
-		<meta-data android:value="ieltseye00001" android:name="UMENG_CHANNEL"/>
+        <activity android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" android:name="com.google.ads.AdActivity" />
+        <meta-data android:name="UMENG_APPKEY" android:value="51eabdec56240bca1b05e670" />
+        <meta-data android:name="UMENG_CHANNEL" android:value="ieltseye00001" />
     </application>
-    <uses-sdk android:minSdkVersion="10" android:targetSdkVersion="17" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
 </manifest>
